kubernetes/apps/default/linkwarden/app/app.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: linkwarden
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkwarden
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: linkwarden
          image: 'ghcr.io/linkwarden/linkwarden:v2.6.2'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: data
              mountPath: /data/data
            - name: next-cache
              mountPath: /data/.next/cache
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: linkwarden
        - name: next-cache
          emptyDir: {}

---
kind: Service
apiVersion: v1
metadata:
  name: linkwarden
  namespace: default
spec:
  selector:
    app: linkwarden
  ports:
    - name: http
      port: 80
      targetPort: http

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: linkwarden
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: links.cluster.dnhrrs.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkwarden
                port:
                  name: http
